[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ships/Emissary.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 25 )

[sub_resource type="Animation" id=3]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Emissary:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 380.033

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Emissary" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Projectile_alert" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Projectile_alert"]
modulate = Color( 0.752941, 0.113725, 0.756863, 1 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_out = SubResource( 3 )

[node name="Detector" type="Area2D" parent="."]
modulate = Color( 0.619608, 0.933333, 0, 0.258824 )
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 4 )

[connection signal="area_entered" from="Projectile_alert" to="." method="_on_Projectile_alert_area_entered"]
[connection signal="area_exited" from="Projectile_alert" to="." method="_on_Projectile_alert_area_exited"]
[connection signal="area_entered" from="Detector" to="." method="_on_Detector_area_entered"]
